GWallet.Backend.NetStandard.h

typedef MonoEmbedObject GWallet_Backend_Currency;
typedef MonoEmbedObject GWallet_Backend_IAccount;
typedef MonoEmbedObject GWallet_Backend_NormalAccount;
typedef MonoEmbedObject GWallet_Backend_ReadOnlyAccount;
typedef MonoEmbedObject GWallet_Backend_ArchivedAccount;
typedef MonoEmbedObject GWallet_Backend_IBlockchainFeeInfo;
typedef MonoEmbedObject GWallet_Backend_TransferAmount;
typedef MonoEmbedObject GWallet_Backend_CachedNetworkData;
typedef MonoEmbedObject GWallet_Backend_UnsignedTransactionProposal;
typedef MonoEmbedObject GWallet_Backend_Client;
typedef MonoEmbedObject GWallet_Backend_ConnectionUnsuccessfulException;
typedef MonoEmbedObject GWallet_Backend_NoResponseReceivedAfterRequestException;
typedef MonoEmbedObject GWallet_Backend_TlsNotSupportedYetInGWalletException;
typedef MonoEmbedObject GWallet_Backend_ServerCannotBeResolvedException;
typedef MonoEmbedObject GWallet_Backend_ServerUnresponsiveException;
typedef MonoEmbedObject GWallet_Backend_OptionConverter;
typedef MonoEmbedObject GWallet_Backend_CustomIdiomaticDuConverter;
typedef MonoEmbedObject GWallet_Backend_IdiomaticDuConverter;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_BlockchainEstimateFeeResult;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_ErrorInnerResult;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_ErrorResult;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_ElectrumServerReturningInternalErrorInJsonResponseException;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_StratumClient;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_ServerTooOld;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_MinerFee;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_OutputInfo;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_RawTransactionOutpoint;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_TransactionDraft;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_TransactionMetadata;
typedef MonoEmbedObject GWallet_Backend_Bitcoin_BouncyCastleSecureRandomWrapperForNBitcoin;
typedef MonoEmbedObject GWallet_Backend_Ether_MinerFee;
typedef MonoEmbedObject GWallet_Backend_Ether_TransactionMetadata;
typedef MonoEmbedObject GWallet_Backend_Ether_ConnectionUnsuccessfulException;
typedef MonoEmbedObject GWallet_Backend_Ether_ServerTimedOutException;
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_ErrorResult* GWallet_Backend_Bitcoin_ErrorResult_new(int32_t id, GWallet_Backend_Bitcoin_ErrorInnerResult* error);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_ErrorResult_ToString(GWallet_Backend_Bitcoin_ErrorResult* object);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_ErrorResult_CompareTo(GWallet_Backend_Bitcoin_ErrorResult* object, GWallet_Backend_Bitcoin_ErrorResult* obj);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Bitcoin_ErrorResult_Equals(GWallet_Backend_Bitcoin_ErrorResult* object, GWallet_Backend_Bitcoin_ErrorResult* obj);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_ErrorResult_get_Id(GWallet_Backend_Bitcoin_ErrorResult* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_ErrorInnerResult* GWallet_Backend_Bitcoin_ErrorResult_get_Error(GWallet_Backend_Bitcoin_ErrorResult* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_ElectrumServerReturningInternalErrorInJsonResponseException* GWallet_Backend_Bitcoin_ElectrumServerReturningInternalErrorInJsonResponseException_new(const char* message, int32_t code);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_ElectrumServerReturningInternalErrorInJsonResponseException_get_ErrorCode(GWallet_Backend_Bitcoin_ElectrumServerReturningInternalErrorInJsonResponseException* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_StratumClient* GWallet_Backend_Bitcoin_StratumClient_new(GWallet_Backend_Client* jsonRpcClient);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_BlockchainEstimateFeeResult* GWallet_Backend_Bitcoin_StratumClient_BlockchainEstimateFee(GWallet_Backend_Bitcoin_StratumClient* object, int32_t numBlocksTarget);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_ServerTooOld* GWallet_Backend_Bitcoin_ServerTooOld_new(const char* data0);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_ServerTooOld* GWallet_Backend_Bitcoin_ServerTooOld_new_1();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_ServerTooOld_get_Data0(GWallet_Backend_Bitcoin_ServerTooOld* object);
MONO_EMBEDDINATOR_API MonoDecimal GWallet_Backend_Bitcoin_MinerFee_CalculateAbsoluteValue(GWallet_Backend_Bitcoin_MinerFee* object);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_MinerFee_get_EstimatedTransactionSizeInBytes(GWallet_Backend_Bitcoin_MinerFee* object);
MONO_EMBEDDINATOR_API MonoDecimal GWallet_Backend_Bitcoin_MinerFee_get_AmountPerKiloByteForFastTransaction(GWallet_Backend_Bitcoin_MinerFee* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_OutputInfo* GWallet_Backend_Bitcoin_OutputInfo_new(int64_t valueInSatoshis, const char* destinationAddress);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_OutputInfo_ToString(GWallet_Backend_Bitcoin_OutputInfo* object);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_OutputInfo_CompareTo(GWallet_Backend_Bitcoin_OutputInfo* object, GWallet_Backend_Bitcoin_OutputInfo* obj);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Bitcoin_OutputInfo_Equals(GWallet_Backend_Bitcoin_OutputInfo* object, GWallet_Backend_Bitcoin_OutputInfo* obj);
MONO_EMBEDDINATOR_API int64_t GWallet_Backend_Bitcoin_OutputInfo_get_ValueInSatoshis(GWallet_Backend_Bitcoin_OutputInfo* object);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_OutputInfo_get_DestinationAddress(GWallet_Backend_Bitcoin_OutputInfo* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_RawTransactionOutpoint* GWallet_Backend_Bitcoin_RawTransactionOutpoint_new(const char* rawTransaction, int32_t outputIndex);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_RawTransactionOutpoint_ToString(GWallet_Backend_Bitcoin_RawTransactionOutpoint* object);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_RawTransactionOutpoint_CompareTo(GWallet_Backend_Bitcoin_RawTransactionOutpoint* object, GWallet_Backend_Bitcoin_RawTransactionOutpoint* obj);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Bitcoin_RawTransactionOutpoint_Equals(GWallet_Backend_Bitcoin_RawTransactionOutpoint* object, GWallet_Backend_Bitcoin_RawTransactionOutpoint* obj);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_RawTransactionOutpoint_get_RawTransaction(GWallet_Backend_Bitcoin_RawTransactionOutpoint* object);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_RawTransactionOutpoint_get_OutputIndex(GWallet_Backend_Bitcoin_RawTransactionOutpoint* object);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_TransactionDraft_ToString(GWallet_Backend_Bitcoin_TransactionDraft* object);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Bitcoin_TransactionDraft_CompareTo(GWallet_Backend_Bitcoin_TransactionDraft* object, GWallet_Backend_Bitcoin_TransactionDraft* obj);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Bitcoin_TransactionDraft_Equals(GWallet_Backend_Bitcoin_TransactionDraft* object, GWallet_Backend_Bitcoin_TransactionDraft* obj);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_TransactionMetadata* GWallet_Backend_Bitcoin_TransactionMetadata_new(GWallet_Backend_Bitcoin_MinerFee* fee, GWallet_Backend_Bitcoin_TransactionDraft* transactionDraft);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Bitcoin_TransactionMetadata_ToString(GWallet_Backend_Bitcoin_TransactionMetadata* object);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Bitcoin_TransactionMetadata_Equals(GWallet_Backend_Bitcoin_TransactionMetadata* object, GWallet_Backend_Bitcoin_TransactionMetadata* obj);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_MinerFee* GWallet_Backend_Bitcoin_TransactionMetadata_get_Fee(GWallet_Backend_Bitcoin_TransactionMetadata* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_TransactionDraft* GWallet_Backend_Bitcoin_TransactionMetadata_get_TransactionDraft(GWallet_Backend_Bitcoin_TransactionMetadata* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Bitcoin_BouncyCastleSecureRandomWrapperForNBitcoin* GWallet_Backend_Bitcoin_BouncyCastleSecureRandomWrapperForNBitcoin_new();
MONO_EMBEDDINATOR_API MonoDecimal GWallet_Backend_Bitcoin_UnitConversion_FromSatoshiToBtc(int64_t satoshis);
MONO_EMBEDDINATOR_API int64_t GWallet_Backend_Bitcoin_UnitConversion_FromBtcToSatoshis(MonoDecimal btcAmount);
MONO_EMBEDDINATOR_API MonoDecimal GWallet_Backend_Bitcoin_UnitConversion_get_HOW_MANY_SATOSHIS_ARE_THERE_IN_ONE_BTC();
MONO_EMBEDDINATOR_API GWallet_Backend_Client* GWallet_Backend_Client_new(const char* host, int32_t port);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Client_Request(GWallet_Backend_Client* object, const char* request);
MONO_EMBEDDINATOR_API MonoDecimal GWallet_Backend_Ether_MinerFee_CalculateAbsoluteValue(GWallet_Backend_Ether_MinerFee* object);
MONO_EMBEDDINATOR_API int64_t GWallet_Backend_Ether_MinerFee_get_GasPriceInWei(GWallet_Backend_Ether_MinerFee* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Currency* GWallet_Backend_Ether_MinerFee_get_Currency(GWallet_Backend_Ether_MinerFee* object);
MONO_EMBEDDINATOR_API GWallet_Backend_Ether_TransactionMetadata* GWallet_Backend_Ether_TransactionMetadata_new(GWallet_Backend_Ether_MinerFee* fee, int64_t transactionCount);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Ether_TransactionMetadata_ToString(GWallet_Backend_Ether_TransactionMetadata* object);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Ether_TransactionMetadata_Equals(GWallet_Backend_Ether_TransactionMetadata* object, GWallet_Backend_Ether_TransactionMetadata* obj);
MONO_EMBEDDINATOR_API GWallet_Backend_Ether_MinerFee* GWallet_Backend_Ether_TransactionMetadata_get_Fee(GWallet_Backend_Ether_TransactionMetadata* object);
MONO_EMBEDDINATOR_API int64_t GWallet_Backend_Ether_TransactionMetadata_get_TransactionCount(GWallet_Backend_Ether_TransactionMetadata* object);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Ether_Server_BroadcastTransaction(GWallet_Backend_Currency* currency, const char* transaction);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Ether_Server_get_PUBLIC_WEB3_API_ETH_INFURA_MEW();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Ether_Server_get_PUBLIC_WEB3_API_ETH_MEW();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Ether_Server_get_PUBLIC_WEB3_API_ETC();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Ether_Server_get_exMsg();
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Ether_Server_get_NUMBER_OF_CONSISTENT_RESPONSES_TO_TRUST_ETH_SERVER_RESULTS();
MONO_EMBEDDINATOR_API GWallet_Backend_Ether_ConnectionUnsuccessfulException* GWallet_Backend_Ether_ConnectionUnsuccessfulException_new(const char* message);
MONO_EMBEDDINATOR_API GWallet_Backend_Ether_ServerTimedOutException* GWallet_Backend_Ether_ServerTimedOutException_new(const char* message);
MONO_EMBEDDINATOR_API void GWallet_Backend_Infrastructure_SetupSentryHook();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Infrastructure_get_sentryUrl();
MONO_EMBEDDINATOR_API void GWallet_Backend_Account_ValidateAddress(GWallet_Backend_Currency* currency, const char* address);
MONO_EMBEDDINATOR_API GWallet_Backend_IBlockchainFeeInfo* GWallet_Backend_Account_EstimateFee(GWallet_Backend_IAccount* account, MonoDecimal amount, const char* destination);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Account_SignTransaction(GWallet_Backend_NormalAccount* account, const char* destination, GWallet_Backend_TransferAmount* amount, GWallet_Backend_IBlockchainFeeInfo* transactionMetadata, const char* password);
MONO_EMBEDDINATOR_API void GWallet_Backend_Account_Archive(GWallet_Backend_NormalAccount* account, const char* password);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Account_SweepArchivedFunds(GWallet_Backend_ArchivedAccount* account, MonoDecimal balance, GWallet_Backend_IAccount* destination, GWallet_Backend_IBlockchainFeeInfo* txMetadata);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Account_SendPayment(GWallet_Backend_NormalAccount* account, GWallet_Backend_IBlockchainFeeInfo* txMetadata, const char* destination, GWallet_Backend_TransferAmount* amount, const char* password);
MONO_EMBEDDINATOR_API void GWallet_Backend_Account_AddPublicWatcher(GWallet_Backend_Currency* currency, const char* publicAddress);
MONO_EMBEDDINATOR_API void GWallet_Backend_Account_RemovePublicWatcher(GWallet_Backend_ReadOnlyAccount* account);
MONO_EMBEDDINATOR_API void GWallet_Backend_Account_SaveUnsignedTransaction(GWallet_Backend_UnsignedTransactionProposal* transProposal, GWallet_Backend_IBlockchainFeeInfo* txMetadata, const char* filePath);
MONO_EMBEDDINATOR_API bool GWallet_Backend_Account_get_wiped();
MONO_EMBEDDINATOR_API void GWallet_Backend_Account_set_wiped(bool value);
MONO_EMBEDDINATOR_API int32_t GWallet_Backend_Account_get_LENGTH_OF_PRIVATE_KEYS();
MONO_EMBEDDINATOR_API GWallet_Backend_CachedNetworkData* GWallet_Backend_Caching_ImportFromJson(const char* cacheData);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Caching_ExportToJson(GWallet_Backend_CachedNetworkData* newCachedData);
MONO_EMBEDDINATOR_API void GWallet_Backend_Caching_SaveSnapshot(GWallet_Backend_CachedNetworkData* newCachedData);
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Caching_get_lastCacheFile();
MONO_EMBEDDINATOR_API GWallet_Backend_ConnectionUnsuccessfulException* GWallet_Backend_ConnectionUnsuccessfulException_new(const char* message);
MONO_EMBEDDINATOR_API GWallet_Backend_ConnectionUnsuccessfulException* GWallet_Backend_ConnectionUnsuccessfulException_new_1();
MONO_EMBEDDINATOR_API GWallet_Backend_NoResponseReceivedAfterRequestException* GWallet_Backend_NoResponseReceivedAfterRequestException_new();
MONO_EMBEDDINATOR_API GWallet_Backend_TlsNotSupportedYetInGWalletException* GWallet_Backend_TlsNotSupportedYetInGWalletException_new();
MONO_EMBEDDINATOR_API GWallet_Backend_ServerCannotBeResolvedException* GWallet_Backend_ServerCannotBeResolvedException_new(const char* message);
MONO_EMBEDDINATOR_API GWallet_Backend_ServerUnresponsiveException* GWallet_Backend_ServerUnresponsiveException_new();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_Marshalling_get_currentVersion();
MONO_EMBEDDINATOR_API const char* GWallet_Backend_VersionHelper_CurrentVersion();
MONO_EMBEDDINATOR_API GWallet_Backend_OptionConverter* GWallet_Backend_OptionConverter_new();
MONO_EMBEDDINATOR_API GWallet_Backend_CustomIdiomaticDuConverter* GWallet_Backend_CustomIdiomaticDuConverter_new();
MONO_EMBEDDINATOR_API GWallet_Backend_IdiomaticDuConverter* GWallet_Backend_IdiomaticDuConverter_new();